# DjangoConUS-2025-schedule

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_main.py
.cursor/rules/: .cursorrules
.github/workflows/: test.yml
docs/: importing-to-calendar.md
output/: djangocon-2025.ics
